--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/JamCode/redisReasrch#readme",
   "dependencies": {
+    "async": "^1.5.2",
     "mysql": "^2.10.2",
     "redis": "^2.4.2"
   }
